Day 4 part 1 - Horizontal & Vertical done

--- a/Puzzles.ipynb
+++ b/Puzzles.ipynb
@@ -2049,6 +2049,8 @@
    "outputs": [],
    "source": [
     "## Part 1 ###\n",
+    "import numpy as np\n",
+    "\n",
     "collectionoflines = []\n",
     "with open(\"./input_day4.txt\", \"r\") as infile:\n",
     "    for line in infile:\n",
@@ -2057,48 +2059,127 @@
     "            cCollect.append(letter)\n",
     "        collectionoflines.append(cCollect) #list in list\n",
     "\n",
-    "def horizontalSearch(inv_pos, row_pos, collectionoflines):\n",
+    "class CeresSearch:\n",
     "    \"\"\"\n",
-    "    Search for xmas horizontally, right and left\\n\n",
-    "    **inv_pos** is the position of an X in a list (row)\\n\n",
-    "    **row_pos** is the iter number of the current row (in collectionlines)\n",
-    "    \"\"\"\n",
-    "    test = collectionoflines[-1:]\n",
-    "    print(test)\n",
-    "\n",
-    "\n",
-    "def verticalSearch(inv_pos, collectionoflines):\n",
-    "    \"\"\"\n",
-    "    Search for xmas vertically, up and down\\n\n",
-    "    *inv_pos* is the position of an X in a list (row)\\n\n",
-    "    *row_pos* is the iter number of the current row (in collectionlines)\n",
+    "    **horizontalSearch()**: performs search horizontally, both left to right and right to left (by flipping order)\n",
+    "    **verticalSearch()**: performs search vertically\n",
+    "    **diagonalSearch()**: performs search diagonally\n",
+    "    #####\n",
+    "    **self.data** <list(list(str))> : is initialized when creating class *(required : given)*\n",
+    "    **self.data_transposed** <np.array> : transposed input data in np.array structure\n",
+    "    **self.searchword** <str> : word to search for *(required : given)*\n",
+    "    **self.searchword_size** <int> : length of search word *(calculated : not given)*\n",
     "    \"\"\"\n",
     "\n",
-    "def diagonalSearch(inv_pos, collectionoflines):\n",
-    "    \"\"\"\n",
-    "    Search for xmas diagonally, up and down, left and right\\n\n",
-    "    *inv_pos* is the position of an X in a list (row)\\n\n",
-    "    *row_pos* is the iter number of the current row (in collectionlines)\n",
-    "    \"\"\"\n",
+    "    def __init__(self, data, searchword : str):\n",
+    "        self.data = np.array(data)\n",
+    "        self.data_transposed = np.transpose(self.data)\n",
+    "        self.searchword = searchword\n",
+    "        self.searchword_size = len(searchword)\n",
+    "\n",
+    "\n",
+    "    def horizontalSearch(self, inv_pos, row_pos,):\n",
+    "        \"\"\"\n",
+    "        Search for xmas horizontally, right and left\\n\n",
+    "        **inv_pos** is the position of an X in a list (row)\\n\n",
+    "        **row_pos** is the iter number of the current row (in self.data)\n",
+    "        \"\"\"\n",
+    "        #correct order horizontal - left to right\n",
+    "        cRow = self.data[row_pos]\n",
+    "        return self.search(inv_pos, row_pos, cRow)\n",
+    "\n",
+    "\n",
+    "    def verticalSearch(self, inv_pos, row_pos):\n",
+    "        \"\"\"\n",
+    "        Search for xmas vertically, up and down\\n\n",
+    "        Transposed data structure makes horizontal search vertical\\n\n",
+    "        *inv_pos* is the position of an X in a list (row)\\n\n",
+    "        *row_pos* is the iter number of the current row (in self.data)\n",
+    "        \"\"\"\n",
+    "        cRow = self.data_transposed[row_pos] \n",
+    "        return self.search(inv_pos, row_pos, cRow)\n",
+    "\n",
+    "\n",
+    "    def diagonalSearch(self, inv_pos, row_pos):\n",
+    "        \"\"\"\n",
+    "        Search for xmas diagonally, up and down, left and right\\n\n",
+    "        *inv_pos* is the position of an X in a list (row)\\n\n",
+    "        *row_pos* is the iter number of the current row (in self.data)\n",
+    "        \"\"\"\n",
+    "        for d in range(4): #Change direction 4 times - up and down, left and right\\n\n",
+    "            str_search = \"\" #Store chars from diagonal search\n",
+    "            for i in range(self.searchword_size):\n",
+    "                str_search += self.data[row_pos+i:row_pos+i+self.searchword_size][inv_pos+i:inv_pos+i+self.searchword_size]\n",
+    "            return str_search\n",
+    "    \n",
+    "\n",
+    "    def search(self, inv_pos, row_pos, data):\n",
+    "        \"\"\"\n",
+    "        Perform search in a list both left to right or right to left\n",
+    "        \"\"\"\n",
+    "        test = data\n",
+    "        hoz_test = \"\".join(test[inv_pos:inv_pos+self.searchword_size])\n",
+    "        if hoz_test == self.searchword and len(test) - inv_pos > 3: return hoz_test\n",
+    "\n",
+    "        #reverse order horizontal - right to left\n",
+    "        test_rev = self.reverselist(test)\n",
+    "        hozrev_test = \"\".join(test_rev[inv_pos:inv_pos+self.searchword_size])\n",
+    "        if hozrev_test == self.searchword and inv_pos > 2: return hozrev_test\n",
+    "    \n",
+    "\n",
+    "    def reverselist(self, list):\n",
+    "        \"\"\"\n",
+    "        Reverse order in list\n",
+    "        \"\"\"\n",
+    "        new_list = []\n",
+    "        for ent in range(0, len(list), -1):\n",
+    "            new_list.append(list[ent])\n",
+    "        return new_list\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SearchWord = \"XMAS\"\n",
+    "\n",
+    "XMAS = CeresSearch(collectionoflines, SearchWord)\n",
+    "for row in range(len(collectionoflines)):\n",
+    "    #print(collectionoflines[row])\n",
+    "    for i in range(len(collectionoflines[row])):\n",
+    "        if collectionoflines[row][i] == \"X\": #only run functions if X is found - efficiency\n",
+    "            hres = XMAS.horizontalSearch(i, row)\n",
+    "            #if hres == SearchWord: print(\"hres:\", hres)\n",
+    "            vres = XMAS.verticalSearch(i, row)\n",
+    "            #if vres == SearchWord: print(\"vres:\", vres)\n",
+    "            dres = XMAS.diagonalSearch(i, row)\n",
+    "            if dres == SearchWord: print(\"dres:\",dres)\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['M', 'S', 'M', 'M', 'S', 'X', 'X', 'X', 'A', 'X', 'X', 'S', 'A', 'M', 'X', 'X', 'S', 'A', 'S', 'X', 'M', 'X', 'S', 'M', 'X', 'M', 'S', 'M', 'S', 'M', 'M', 'M', 'M', 'M', 'A', 'S', 'X', 'S', 'M', 'X', 'S', 'M', 'M', 'S', 'M', 'S', 'M', 'M', 'M', 'A', 'M', 'X', 'M', 'X', 'M', 'S', 'S', 'S', 'X', 'S', 'X', 'M', 'M', 'M', 'S', 'M', 'M', 'M', 'M', 'X', 'X', 'X', 'S', 'A', 'M', 'X', 'X', 'M', 'X', 'M', 'S', 'M', 'S', 'M', 'M', 'S', 'X', 'M', 'A', 'M', 'M', 'X', 'M', 'A', 'S', 'A', 'X', 'M', 'M', 'X', 'M', 'A', 'S', 'X', 'S', 'S', 'M', 'M', 'M', 'X', 'S', 'X', 'S', 'M', 'X', 'S', 'M', 'S', 'X', 'M', 'X', 'M', 'M', 'M', 'S', 'M', 'X', 'S', 'X', 'M', 'S', 'M', 'S', 'X', 'M', 'S', 'A', 'M', 'A', 'M']]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['M', 'A', 'S', 'M', 'S', 'A', 'M', 'X']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "horizontalSearch(1, collectionoflines)"
+    "collectionoflines[1][-60:-52]"
    ]
   },
   {
