Day 4 Part 2 - Done

--- a/Puzzles.ipynb
+++ b/Puzzles.ipynb
@@ -205,11 +205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Part 1 ###\n",
     "import numpy as np\n",
     "\n",
     "testDataset_in = [[\"M\", \"M\", \"M\", \"S\", \"X\", \"X\", \"M\", \"A\", \"S\", \"M\"], \n",
@@ -231,7 +230,7 @@
     "            cCollect.append(letter)\n",
     "        collectionoflines.append(cCollect) #list in list\n",
     "\n",
-    "#collectionoflines = testDataset_in #toggle for test dataset\n",
+    "collectionoflines = testDataset_in #toggle for test dataset\n",
     "\n",
     "class CeresSearch:\n",
     "    \"\"\"\n",
@@ -419,6 +418,63 @@
     "            new_list.append(ent)\n",
     "        return new_list\n",
     "\n",
+    "    def XMASdiagonal(self, inv_pos, row_pos, debug_mode : bool = False):\n",
+    "        \"\"\"\n",
+    "        Checks diagonal positions when A positions (row_pos, inv_pos) is found \n",
+    "        \"\"\"\n",
+    "        topright = \"\"\n",
+    "        topleft = \"\"\n",
+    "        bottomright = \"\"\n",
+    "        bottomleft = \"\"\n",
+    "        FoundMAS = [False, False]\n",
+    "        #Orientation: top right\n",
+    "        if row_pos >= 1 and len(self.data[row_pos]) - inv_pos >= 1: \n",
+    "            try: \n",
+    "                topright = str(self.data[row_pos-1][inv_pos+1])\n",
+    "            except IndexError as err:\n",
+    "                if debug_mode: print(f\"index of size {len(self.data[row_pos])} out of bounds.\\nError: {err}\")\n",
+    "            if debug_mode: print(f\"dsearch\\t[top right]\", topright)\n",
+    "\n",
+    "        #Orientation: top left\n",
+    "        if row_pos >= 1 and inv_pos >= 1: #no need to run wrongfully spelling orientations\n",
+    "            try: \n",
+    "                topleft = str(self.data[row_pos-1][inv_pos-1])\n",
+    "            except IndexError as err:\n",
+    "                if debug_mode: print(f\"index of size {len(self.data[row_pos])} out of bounds.\\nError: {err}\")\n",
+    "            if debug_mode: print(f\"dsearch\\t[top left]\", topleft)\n",
+    "\n",
+    "        #Orientation: bottom right\n",
+    "        if len(self.data) - row_pos >= 1 and len(self.data[row_pos]) - inv_pos >= 1: #no need to run wrongfully spelling orientations\n",
+    "            try: \n",
+    "                bottomright = str(self.data[row_pos+1][inv_pos+1])\n",
+    "            except IndexError as err:\n",
+    "                if debug_mode: print(f\"index of size {len(self.data[row_pos])} out of bounds.\\nError: {err}\")\n",
+    "            if debug_mode: print(f\"dsearch\\t[bottom right]\", bottomright)\n",
+    "\n",
+    "        #Orientation: bottom left\n",
+    "        if len(self.data) - row_pos >= 1 and inv_pos >= 1: #no need to run wrongfully spelling orientations\n",
+    "            try:\n",
+    "                bottomleft = str(self.data[row_pos+1][inv_pos-1])\n",
+    "            except IndexError as err:\n",
+    "                if debug_mode: print(f\"index of size {len(self.data[row_pos])} out of bounds.\\nError: {err}\")\n",
+    "            if debug_mode: print(f\"dsearch\\t[bottom left]\", bottomleft)\n",
+    "\n",
+    "        #Raising flags if wrongful spelling in each orientation\n",
+    "        if topright+\"A\"+bottomleft == self.searchword or bottomleft+\"A\"+topright == self.searchword: FoundMAS[0] = True\n",
+    "        if topleft+\"A\"+bottomright == self.searchword or bottomright+\"A\"+topleft == self.searchword: FoundMAS[1] = True\n",
+    "    \n",
+    "        #If none starts with searchword; Early termination\n",
+    "        if False in FoundMAS:\n",
+    "            if debug_mode: print(f\"No Found MAS\\nTopRight-BottomLeft: {topright}A{bottomleft}\\nBottomLeft-TopRight: {bottomleft}A{topright}\\nTopLeft-BottomRight: {topleft}A{bottomright}\\nBottomRight-TopLeft: {bottomright}A{topleft}\")\n",
+    "            if debug_mode: print(f\"Current flags: {FoundMAS}\\n\")\n",
+    "            return None\n",
+    "    \n",
+    "        if debug_mode: print(f\"Current flags: {FoundMAS}\\n\")\n",
+    "\n",
+    "        return FoundMAS\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -428,6 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Part 1 ###\n",
     "SearchWord = \"XMAS\"\n",
     "SearchWordCounter = 0\n",
     "TS = True #Troubleshoot toggle; prints results from hres, vres and dres\n",
@@ -468,6 +525,433 @@
     "print(f\"The search word: <{SearchWord}> was found: <{SearchWordCounter}> number of times\")\n",
     "            \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##### NEW ROW #####\n",
+      "['M', 'M', 'M', 'S', 'X', 'X', 'M', 'A', 'S', 'M']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[bottom right] S\n",
+      "dsearch\t[bottom left] S\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: AS\n",
+      "BottomLeft-TopRight: SA\n",
+      "TopLeft-BottomRight: AS\n",
+      "BottomRight-TopLeft: SA\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW ROW #####\n",
+      "['M', 'S', 'A', 'M', 'X', 'M', 'S', 'M', 'S', 'A']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] S\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  1\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[top right] \n",
+      "dsearch\t[top left] S\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom right] \n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: AM\n",
+      "BottomLeft-TopRight: MA\n",
+      "TopLeft-BottomRight: SA\n",
+      "BottomRight-TopLeft: AS\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW ROW #####\n",
+      "['A', 'M', 'X', 'S', 'X', 'M', 'A', 'A', 'M', 'M']\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[bottom right] S\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: SA\n",
+      "BottomLeft-TopRight: AS\n",
+      "TopLeft-BottomRight: AS\n",
+      "BottomRight-TopLeft: SA\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] M\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] S\n",
+      "dsearch\t[bottom left] S\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  2\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  3\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW ROW #####\n",
+      "['M', 'S', 'A', 'M', 'A', 'S', 'M', 'S', 'M', 'X']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] S\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  4\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] M\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] S\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  5\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW ROW #####\n",
+      "['X', 'M', 'A', 'S', 'A', 'M', 'X', 'A', 'M', 'M']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] M\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] X\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: MAX\n",
+      "BottomLeft-TopRight: XAM\n",
+      "TopLeft-BottomRight: SAM\n",
+      "BottomRight-TopLeft: MAS\n",
+      "Current flags: [False, True]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] X\n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: SAM\n",
+      "BottomLeft-TopRight: MAS\n",
+      "TopLeft-BottomRight: MAX\n",
+      "BottomRight-TopLeft: XAM\n",
+      "Current flags: [True, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] M\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] X\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: MAX\n",
+      "BottomLeft-TopRight: XAM\n",
+      "TopLeft-BottomRight: MAM\n",
+      "BottomRight-TopLeft: MAM\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW ROW #####\n",
+      "['X', 'X', 'A', 'M', 'M', 'X', 'X', 'A', 'M', 'A']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: SAM\n",
+      "BottomLeft-TopRight: MAS\n",
+      "TopLeft-BottomRight: MAM\n",
+      "BottomRight-TopLeft: MAM\n",
+      "Current flags: [True, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] M\n",
+      "dsearch\t[top left] X\n",
+      "dsearch\t[bottom right] S\n",
+      "dsearch\t[bottom left] S\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: MAS\n",
+      "BottomLeft-TopRight: SAM\n",
+      "TopLeft-BottomRight: XAS\n",
+      "BottomRight-TopLeft: SAX\n",
+      "Current flags: [True, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[top right] \n",
+      "dsearch\t[top left] M\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom right] \n",
+      "dsearch\t[bottom left] S\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: AS\n",
+      "BottomLeft-TopRight: SA\n",
+      "TopLeft-BottomRight: MA\n",
+      "BottomRight-TopLeft: AM\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW ROW #####\n",
+      "['S', 'M', 'S', 'M', 'S', 'A', 'S', 'X', 'S', 'S']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] X\n",
+      "dsearch\t[top left] M\n",
+      "dsearch\t[bottom right] S\n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: XAM\n",
+      "BottomLeft-TopRight: MAX\n",
+      "TopLeft-BottomRight: MAS\n",
+      "BottomRight-TopLeft: SAM\n",
+      "Current flags: [False, True]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW ROW #####\n",
+      "['S', 'A', 'X', 'A', 'M', 'A', 'S', 'A', 'A', 'A']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  6\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  7\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  8\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "Current flags: [True, True]\n",
+      "\n",
+      "new dres: [True, True]\n",
+      "dres: [True, True]\n",
+      "Counter:  9\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] S\n",
+      "dsearch\t[top left] X\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: SAM\n",
+      "BottomLeft-TopRight: MAS\n",
+      "TopLeft-BottomRight: XAM\n",
+      "BottomRight-TopLeft: MAX\n",
+      "Current flags: [True, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[top right] \n",
+      "dsearch\t[top left] S\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom right] \n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: AM\n",
+      "BottomLeft-TopRight: MA\n",
+      "TopLeft-BottomRight: SA\n",
+      "BottomRight-TopLeft: AS\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW ROW #####\n",
+      "['M', 'A', 'M', 'M', 'M', 'X', 'M', 'M', 'M', 'M']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] X\n",
+      "dsearch\t[top left] S\n",
+      "dsearch\t[bottom right] M\n",
+      "dsearch\t[bottom left] M\n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: XAM\n",
+      "BottomLeft-TopRight: MAX\n",
+      "TopLeft-BottomRight: SAM\n",
+      "BottomRight-TopLeft: MAS\n",
+      "Current flags: [False, True]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW ROW #####\n",
+      "['M', 'X', 'M', 'X', 'A', 'X', 'M', 'A', 'S', 'X']\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] X\n",
+      "dsearch\t[top left] M\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom right] \n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom left] \n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: XA\n",
+      "BottomLeft-TopRight: AX\n",
+      "TopLeft-BottomRight: MA\n",
+      "BottomRight-TopLeft: AM\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "dsearch\t[top right] M\n",
+      "dsearch\t[top left] M\n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom right] \n",
+      "index of size 10 out of bounds.\n",
+      "Error: index 10 is out of bounds for axis 0 with size 10\n",
+      "dsearch\t[bottom left] \n",
+      "No Found MAS\n",
+      "TopRight-BottomLeft: MA\n",
+      "BottomLeft-TopRight: AM\n",
+      "TopLeft-BottomRight: MA\n",
+      "BottomRight-TopLeft: AM\n",
+      "Current flags: [False, False]\n",
+      "\n",
+      "##### NEW LETTER #####\n",
+      "##### NEW LETTER #####\n",
+      "The search word: <MAS> was found: <9> number of times\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Part 2 ###\n",
+    "SearchWord = \"MAS\"\n",
+    "SearchWordCounter = 0\n",
+    "TS = True #Troubleshoot toggle; prints results from hres, vres and dres\n",
+    "\n",
+    "MAS = CeresSearch(collectionoflines, SearchWord)\n",
+    "for row in range(len(collectionoflines)):\n",
+    "    if TS: print(\"##### NEW ROW #####\")\n",
+    "    if TS: print(collectionoflines[row])\n",
+    "    for i in range(len(collectionoflines[row])):\n",
+    "        if TS: print(\"##### NEW LETTER #####\")\n",
+    "        if collectionoflines[row][i] == \"A\": #only run functions if A is found - efficiency\n",
+    "            #Diagonal testing\n",
+    "            dres = MAS.XMASdiagonal(i, row, debug_mode=True)\n",
+    "            if dres is not None:\n",
+    "                if TS: print(f\"new dres: {dres}\")\n",
+    "                if False not in dres and dres is not None:\n",
+    "                    if TS: print(\"dres:\",dres)\n",
+    "                    SearchWordCounter += 1\n",
+    "                    if TS: print(\"Counter: \",SearchWordCounter)\n",
+    "\n",
+    "print(f\"The search word: <{SearchWord}> was found: <{SearchWordCounter}> number of times\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5"
    ]
   },
   {
